CloudFormation/jenkins-server.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: EC2 instance launched with Jenkins, Docker, Git and Java

Parameters:
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 Key Pair

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Existing VPC ID

  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet within the selected VPC

Resources:
  EC2FullAccessRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2FullAccessRole

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and Jenkins port 8080
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.medium
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyPairName
      IamInstanceProfile: !Ref EC2InstanceProfile
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref SubnetId
          GroupSet:
            - !Ref SecurityGroup
      Tags:
        - Key: Name
          Value: Jenkins-server
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          # Install Git
          yum install -y git
          # Install Java 11 (Jenkins requirement)
          yum install -y java-11-openjdk-devel
          # Add Jenkins repository and key
          wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat-stable/jenkins.repo
          rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key
          # Install Jenkins
          yum install -y jenkins
          # Start and enable Jenkins
          systemctl enable jenkins
          systemctl start jenkins
          # Install Docker
          amazon-linux-extras install docker -y
          systemctl enable docker
          systemctl start docker
          usermod -a -G docker ec2-user
